# lol

./: .gitignore  Application.hs  Foundation.hs  Foundation.hs-boot  Import.hs  Model.hs  README.md  Settings.hs  lol.cabal  stack.yaml
Handler/: Common.hs  Custom.hs  Home.hs  Menu.hs  Order.hs  OrderNew.hs  Page.hs  Product.hs
Import/: Address.hs  Base.hs  Charge.hs  Cookie.hs  Enum.hs  Layout.hs  Layout.hs-boot  Message.hs  Money.hs  Phone.hs  Piece.hs
app/: devel.hs
config/: keter.yml  models  routes  template-settings.yml  test-settings.yml
static/css/: base.css
static/deployments/jadegarden/: style.css
static/global/css/: base.css
static/global/js/: ajax.js  imgmenu.js
static/js/: order.js
static/localhost/css/: style.css
templates/: ajax.julius  checkout.hamlet  checkout.julius  default-layout-wrapper.hamlet  homepage.hamlet  login.hamlet  menu.hamlet  menu.julius  menu.lucius  order-lines.hamlet  order-new.hamlet  order-row.hamlet  order-rowpair.hamlet  order-table.hamlet  order.hamlet  order.julius  page-edit.julius  page.hamlet  product-edit.hamlet  product-list.hamlet  product-list.julius  product-new.hamlet
templates/default/: homepage.hamlet  homepage.lucius
templates/pieces/: bigbanner.hamlet  default.hamlet  image.hamlet  imgmenu.hamlet  imgmenu.julius  laxus.hamlet  rizon.hamlet  scroll.hamlet  scroll.lucius  sinister.hamlet  test.hamlet  youtube.hamlet
templates/wrappers/: amazekebab.hamlet  default-layout.hamlet  navbar.hamlet  navbar.lucius
test/: TestImport.hs
test/Handler/: HomeSpec.hs
