name:              lol
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules:
        Application
        Foundation
        Import
        Import.Base
        Import.Enum
        Import.Piece
        Import.Cookie
        Import.Money
        Import.Phone
        Model
        Settings
        Settings.StaticFiles
        Handler.Common
        Handler.Custom
        Handler.Menu
        Handler.Order
        Handler.OrderNew
        Handler.Product
        Handler.Page

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions:
        TemplateHaskell
        QuasiQuotes
        OverloadedStrings
        NoImplicitPrelude
        CPP
        MultiParamTypeClasses
        TypeFamilies
        GADTs
        GeneralizedNewtypeDeriving
        FlexibleContexts
        FlexibleInstances
        EmptyDataDecls
        --NoMonomorphismRestriction
        DeriveDataTypeable
        ViewPatterns
        TupleSections
        RecordWildCards

    build-depends:
          base
        , yesod
        , yesod-core
        , yesod-auth
        , yesod-static
        , yesod-form
        , yesod-persistent
        , basic-prelude
        --, classy-prelude
        --, classy-prelude-conduit
        --, classy-prelude-yesod
        , bytestring
        , text
        , persistent
        , persistent-mysql
        , persistent-template
        , template-haskell
        , shakespeare
        , hjsmin
        --, monad-control
        , wai-extra
        , yaml
        , http-conduit
        --, directory
        , warp
        , data-default
        , aeson
        , conduit
        , monad-logger
        , fast-logger
        --, wai-logger
        , file-embed
        --, safe
        --, unordered-containers
        , containers
        --, vector
        --, time
        , wai
        , attoparsec
        , blaze-markup
        , mime-mail
        , esqueleto
        , stripe-core
        , stripe-haskell
        , markdown
        , http-types
        , blaze-html
        , vector
        , case-insensitive

executable lol
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, lol

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions:
        TemplateHaskell
        QuasiQuotes
        OverloadedStrings
        NoImplicitPrelude
        CPP
        MultiParamTypeClasses
        TypeFamilies
        GADTs
        GeneralizedNewtypeDeriving
        FlexibleContexts
        FlexibleInstances
        EmptyDataDecls
        NoMonomorphismRestriction
        DeriveDataTypeable
        ViewPatterns
        TupleSections

    build-depends:
          base
        , lol
        , yesod-test
        , yesod-core
        , yesod
        , persistent
        , persistent-mysql
        , resourcet
        , monad-logger
        , shakespeare
        , transformers
        , hspec
        , classy-prelude
        , classy-prelude-yesod
